# portfolio-api

./: .env  Cargo.toml  portfolio_db.sql
data/: projects.json
src/: main.rs
src/application/: app_state.rs  mod.rs
src/application/document/: document_services.rs  mod.rs
src/application/errors/: mod.rs
src/application/project/: project_services.rs
src/domain/: mod.rs
src/domain/document/: document_repository.rs  mod.rs
src/domain/project/: mod.rs  project_repository.rs
src/infrastructure/: mod.rs  utils.rs
src/infrastructure/database/: database_connection.rs
src/infrastructure/document/: mod.rs  postgres_document_repository.rs
src/infrastructure/project/: mod.rs  postgres_project_repository.rs
src/presentation/: api.rs  mod.rs
src/presentation/document/: document_router.rs  mod.rs  routes.rs
src/presentation/http/: default_response.rs  http_error.rs  mod.rs
src/presentation/project/: mod.rs  project_router.rs  routes.rs
