[package]
name = "portfolio_backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
async-trait = "0.1.81"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = "0.7.11"
